--- a/MyTabLayout_find_20171004/app/src/main/res/values/strings.xml
+++ b/MyTabLayout_find_20171004/app/src/main/res/values/strings.xml
@@ -11,4 +11,14 @@
     <string name="navigation_drawer_open">Open navigation drawer</string>
     <string name="navigation_drawer_close">Close navigation drawer</string>
 
+    <!-- 권한화면 -->
+    <string name="permission_checking">권한 확인중..</string>
+    <string name="permission_setting_title">권한 설정</string>
+    <string name="permission_setting_message">앱을 실행하기 위해서는 권한을 설정해야 합니다.</string>
+    <string name="permission_setting_restart">권한을 설정하고 다시 실행해주세요.</string>
+    <string name="setting"></string>
+
+    <!-- 공통 -->
+    <string name="close">닫기</string>
+    <string name="cancel">취소</string>
 </resources>
